[package]
name = "aide"
version = "0.1.0"
description = "Aide — personal assistant task manager"
authors = []
edition = "2021"

[lib]
name = "aide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
